--- a/Auth-API/appsettings.json
+++ b/Auth-API/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ADAM-HP;Database=FirstApiJwt;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SQLConnection": "Server=SR-GAMING;Database=FirstApiJwt;Trusted_Connection=True;MultipleActiveResultSets=true",
+    
   },
 
   "Jwt": {
