--- a/Auth-API/appsettings.json
+++ b/Auth-API/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "SQLConnection": "Server=SR-GAMING;Database=FirstApiJwt;Trusted_Connection=True;MultipleActiveResultSets=true",
-    
+    "DefaultConnection": "Server=SR-GAMING;Database=netStore;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SQLConnection": "server=localhost;database=netStore;user=root;password=Khairi@4114!"
   },
 
   "Jwt": {
